Update header and contact email in index.html

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
   <div class="container">
     <header>
       <h1>Wanxin Chen</h1>
-      <h2>Economics PhD · Corporate Bond Markets · Capital Supply Uncertainty</h2>
+      <h2>Economics PhD · Corporate Debt · Sovereign Debt · International Capital Flow · Mutual Funds</h2>
     </header>
 
     <nav>
@@ -85,7 +85,7 @@
 
     <section id="contact">
       <h3>Contact</h3>
-      <p>Email: wanxin.chen@example.com</p>
+      <p>Email: wanxin.chen@gwu.edu</p>
     </section>
   </div>
 </body>
