Revise bio and research sections in index.html
Updated personal and research information in index.html.

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
   <div class="container">
     <header>
       <h1>Wanxin Chen</h1>
-      <h2>Economics PhD · Corporate Finance · International Finance </h2>
+      <h2>Economics PhD · Corporate Finance · International Finance</h2>
     </header>
 
     <nav>
@@ -64,22 +64,24 @@
     <section id="bio">
       <h3>About Me</h3>
       <p>
-        I am a PhD economist specializing in corporate finance and international finance. My work blends empirical corporate finance with macroeconomic
-        frameworks.
+        I am a Ph.D. candidate in Economics at The George Washington University, graduating in May 2026. My research focuses on corporate debt, sovereign debt, and international capital flows. I study how capital-supply uncertainty, global financial conditions, and policy frameworks shape firm and sovereign financing decisions. My job market paper examines how mutual fund flow volatility influences corporate bond refinancing timing.
       </p>
     </section>
 
     <section id="research">
       <h3>Research</h3>
       <ul>
-        <li><strong>Corporate Bond Refinancing Under Capital Supply Uncertainty</strong><br />Job Market Paper.</li>
-        <li><strong>Green Bonds, Risk, and Coordination in Sovereign Markets</strong><br />Working paper.</li>
+        <li><strong>Corporate Bond Refinancing Under Capital Supply Uncertainty</strong><br />Job Market Paper. Examines how mutual fund flow volatility affects refinancing timing, with strong effects for high-yield firms.</li>
+        <li><strong>Push vs. Pull Factors in International Capital Flows</strong><br />Working paper with Grace Sun and Tomas Williams. Shows that interactions between global push and local pull factors significantly amplify flow volatility.</li>
+        <li><strong>Sovereign Green Bonds</strong><br />Working paper. Documents four rationales for sovereign green bond issuance and identifies a 5 bps greenium on average, larger in EMs.</li>
       </ul>
     </section>
 
     <section id="cv">
       <h3>Curriculum Vitae</h3>
       <p><a href="cv.pdf" target="_blank">Download CV</a></p>
+      <p><strong>Education:</strong> Ph.D. in Economics (GWU, 2026); M.S. in Quantitative Financial Economics (Duke, 2020); B.S. in Mathematics (Nanjing University, 2018).</p>
+      <p><strong>Awards:</strong> Dunn & Kendrick Endowed Summer Award (2023, 2024); Hsieh Graduate Teaching Award (2025).</p>
     </section>
 
     <section id="contact">
