Revise header and bio for updated academic profile
Updated the header and bio sections to reflect current academic status and research focus.

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
   <div class="container">
     <header>
       <h1>Wanxin Chen</h1>
-      <h2>Economics PhD · Corporate Bond Markets · Capital Supply Uncertainty</h2>
+      <h2>Economics PhD Candidate · Corporate Finance · International Finance</h2>
     </header>
 
     <nav>
@@ -64,8 +64,7 @@
     <section id="bio">
       <h3>About Me</h3>
       <p>
-        I am a Ph.D. candidate in Economics at The George Washington University, working at the corporate finance and international macroeconomics. My research studies how capital-supply uncertainty, global conditions, and institutional investor behavior shape firms’ and sovereigns’ financing decisions.
-      </p>
+        I am a PhD economist specializing in corporate finance and international finance. My work blends empirical corporate finance with macroeconomic frameworks.
     </section>
 
     <section id="research">
