--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
   <ul>
   <li><strong>Corporate Bond Refinancing Under Capital Supply Uncertainty</strong><br />Job Market Paper. Presented at the <a href="https://www.law.uchicago.edu/2025-chicago-harvard-wharton-insolvency-restructuring-conference-agenda" target="_blank">Chicago–Harvard–Wharton Insolvency & Restructuring Conference</a>, <a href="https://www.aeaweb.org/conference/2025-assa-spotlight" target="_blank">AEA Annual Meeting (Poster Session)</a>, and the <a href="https://www.fmaconferences.org/Vancouver/VancouverProgram.htm#006" target="_blank">FMA Annual Meeting (Corporate Debt Market Session)</a>.</li>
   <p><a href="JMP_Chen.pdf" target="_blank">Download Job Market Paper</a></p>
-  <li><strong>Push vs. Pull Factors in International Capital Flows</strong><br />Working paper (with Grace Sun and Tomas Williams).</li>
+  <li><strong>Push vs. Pull Factors in International Capital Flows</strong><br />Working paper (with Grace Sun and <a href="https://tomas-williams.com/" target="_blank">Tomas Williams</a>).</li>
   <li><strong>Sovereign Green Bonds</strong><br />Working paper.</li>
   </ul>
   </section>
