Update contact email address

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 
     <section id="contact">
       <h3>Contact</h3>
-      <p>Email: wanxinchen@email.gwu.edu</p>
+      <p>Email: wanxinchen@gwu.edu</p>
     </section>
   </div>
 </body>
